--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -524,6 +524,7 @@ Resources:
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, DovetailCpu]
         SharedRedisReplicationGroupEndpointAddress: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointAddress
         SharedRedisReplicationGroupEndpointPort: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointPort
+        NewRelicApiKeyPrxLite: !Ref NewRelicApiKeyPrxLite
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
