--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -212,7 +212,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Exchange }
-  TaskRole:
+  TaskRole: # TODO Refactor IAM user into this role: prx.org, exchange-staging
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
