--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -206,7 +206,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Networks }
-  PublicWebTaskRole:
+  PublicWebTaskRole: # TODO Refactor IAM user into this role: networks, networks-staging
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
@@ -561,7 +561,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Networks }
-  SphinxServerTaskRole:
+  SphinxServerTaskRole: # TODO Refactor IAM user into this role: networks, networks-staging
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
