--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -123,16 +123,16 @@ Resources:
               - !Ref EcsLaunchEndpointsAccessSecurityGroupId
               - !Ref KmsEndpointAccessSecurityGroupId
             Ipv6AddressCount: 1
-        TagSpecifications:
-          - ResourceType: launch-template
-            Tags:
-              - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-              - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-              - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-              - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-              - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-              - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-              - { Key: prx:dev:application, Value: Common }
+        # TagSpecifications:
+        #   - ResourceType: launch-template
+        #     Tags:
+        #       - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        #       - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        #       - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        #       - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        #       - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        #       - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        #       - { Key: prx:dev:application, Value: Common }
         UserData:
           # User data runs commands on EC2 instances when they are launched. To
           # support configuration updates on running EC2 instance, the user
