--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -123,16 +123,6 @@ Resources:
               - !Ref EcsLaunchEndpointsAccessSecurityGroupId
               - !Ref KmsEndpointAccessSecurityGroupId
             Ipv6AddressCount: 1
-        # TagSpecifications:
-        #   - ResourceType: launch-template
-        #     Tags:
-        #       - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        #       - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        #       - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        #       - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-        #       - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-        #       - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        #       - { Key: prx:dev:application, Value: Common }
         UserData:
           # User data runs commands on EC2 instances when they are launched. To
           # support configuration updates on running EC2 instance, the user
@@ -173,6 +163,16 @@ Resources:
               # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-attribute-creationpolicy.html
               /opt/aws/bin/cfn-signal -e $? --region ${AWS::Region} --stack ${AWS::StackName} --resource Asg
               --==BOUNDARY==--
+      TagSpecifications:
+        - ResourceType: launch-template
+          Tags:
+            - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+            - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+            - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+            - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+            - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+            - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+            - { Key: prx:dev:application, Value: Common }
     Metadata:
       # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-init.html
       # This AWS::CloudFormation::Init metadata is queried by cfn-init, which
