Add SES DNS records for theworld.org

--- a/dns/theworld.org-hosted-zone.yml
+++ b/dns/theworld.org-hosted-zone.yml
@@ -72,6 +72,16 @@ Resources:
             - '"v=spf1 include:_spf.createsend.com -all"'
           TTL: "3600"
           Type: TXT
+        - Name: !Sub bounces.${Domain}
+          ResourceRecords:
+            - 10 feedback-smtp.us-east-2.amazonses.com.
+          TTL: "3600"
+          Type: MX
+        - Name: !Sub bounces.${Domain}
+          ResourceRecords:
+            - '"v=spf1 include:amazonses.com ~all"'
+          TTL: "3600"
+          Type: TXT
         - Name: !Sub _dmarc.${Domain}
           ResourceRecords:
             - '"v=DMARC1; p=none; pct=100; rua=mailto:dmarc-reports@prx.org; ruf=mailto:dmarc-reports@prx.org"'
@@ -288,5 +298,28 @@ Resources:
         - Name: !Sub _69e3012e6d990b8b21c001001e70b2a0.feed.${Domain}
           ResourceRecords:
             - _1fcc43a42474af1ec05a29f236ca68a3.olprtlswtu.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+
+  AwsSes:
+    Type: AWS::Route53::RecordSetGroup
+    Properties:
+      Comment: AWS SES-specific (DKIM, etc)
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        # The World account, us-east-2
+        - Name: !Sub clutg2gocyrknysqk3eobg4qrwe2goq3._domainkey.${Domain}
+          ResourceRecords:
+            - clutg2gocyrknysqk3eobg4qrwe2goq3.dkim.amazonses.com.
+          TTL: "3600"
+          Type: CNAME
+        - Name: !Sub 4bo2hjo45zccqpgwpwodtq3l3ogilglh._domainkey.${Domain}
+          ResourceRecords:
+            - 4bo2hjo45zccqpgwpwodtq3l3ogilglh.dkim.amazonses.com.
+          TTL: "3600"
+          Type: CNAME
+        - Name: !Sub ummhdjgdoerct57by47ux4r7gd23aoe3._domainkey.${Domain}
+          ResourceRecords:
+            - ummhdjgdoerct57by47ux4r7gd23aoe3.dkim.amazonses.com.
           TTL: "3600"
           Type: CNAME
