Move topic policy to queue policy

--- a/stacks/shared-announce.yml
+++ b/stacks/shared-announce.yml
@@ -45,21 +45,24 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
       TopicName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_mySubject_myVerb
-  PlaceholderTopicPolicy:
-    Type: AWS::SNS::TopicPolicy
-    Properties:
-      PolicyDocument:
-        Id: AnnouncePolicy
-        Statement:
-          - Action: sqs:SendMessage
-            Effect: Allow
-            Principal:
-              Service: sns.amazonaws.com
-            Resource: !GetAtt PlaceholderQueue.Arn
-            Sid: SqsSend
-        Version: "2012-10-17"
-      Topics:
-        - !Ref PlaceholderTopic
+  # PlaceholderTopicPolicy:
+  #   Type: AWS::SNS::TopicPolicy
+  #   Properties:
+  #     PolicyDocument:
+  #       Id: AnnouncePolicy
+  #       Statement:
+  #         - Action: sqs:SendMessage
+  #           Condition:
+  #             ArnEquals:
+  #               aws:SourceArn: !Ref PlaceholderTopic
+  #           Effect: Allow
+  #           Principal:
+  #             Service: sns.amazonaws.com
+  #           Resource: !GetAtt PlaceholderQueue.Arn
+  #           Sid: SqsSend
+  #       Version: "2012-10-17"
+  #     Topics:
+  #       - !Ref PlaceholderTopic
 
   PlaceholderQueue:
     Type: AWS::SQS::Queue
@@ -79,6 +82,24 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common } # TODO App-specific
       VisibilityTimeout: 3600 # 1 hour
+  PlaceholderQueuePolicy:
+    Type: AWS::SQS::QueuePolicy
+    Properties:
+      PolicyDocument:
+        Id: AnnouncePolicy
+        Statement:
+          - Action: sqs:SendMessage
+            Condition:
+              ArnEquals:
+                aws:SourceArn: !Ref PlaceholderTopic
+            Effect: Allow
+            Principal:
+              Service: sns.amazonaws.com
+            Resource: !GetAtt PlaceholderQueue.Arn
+            Sid: SqsSend
+        Version: "2012-10-17"
+      Queues:
+        - !GetAtt PlaceholderQueue.Arn
 
   PlaceholderSubscription:
     Type: AWS::SNS::Subscription
