--- a/stacks/shared-announce.yml
+++ b/stacks/shared-announce.yml
@@ -99,7 +99,7 @@ Resources:
             Sid: SqsSend
         Version: "2012-10-17"
       Queues:
-        - !GetAtt PlaceholderQueue.Arn
+        - !Ref PlaceholderQueue
 
   # PlaceholderSubscription:
   #   Type: AWS::SNS::Subscription
