--- a/stacks/shared-announce.yml
+++ b/stacks/shared-announce.yml
@@ -94,20 +94,20 @@ Resources:
                 aws:SourceArn: !Ref PlaceholderTopic
             Effect: Allow
             Principal:
-              AWS: "*"
+              Service: sns.amazonaws.com
             Resource: !GetAtt PlaceholderQueue.Arn
             Sid: SqsSend
         Version: "2012-10-17"
       Queues:
         - !Ref PlaceholderQueue
 
-  # PlaceholderSubscription:
-  #   Type: AWS::SNS::Subscription
-  #   Properties:
-  #     Endpoint: !GetAtt PlaceholderQueue.Arn
-  #     Protocol: sqs
-  #     RawMessageDelivery: true
-  #     TopicArn: !Ref PlaceholderTopic
+  PlaceholderSubscription:
+    Type: AWS::SNS::Subscription
+    Properties:
+      Endpoint: !GetAtt PlaceholderQueue.Arn
+      Protocol: sqs
+      RawMessageDelivery: true
+      TopicArn: !Ref PlaceholderTopic
 
 Outputs:
   ResourcePrefix:
