Pass announce prefix to stacks

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -40,6 +40,7 @@ Parameters:
   SharedAuroraMysqlPort: { Type: String }
   SharedRedisReplicationGroupEndpointAddress: { Type: String }
   SharedRedisReplicationGroupEndpointPort: { Type: String }
+  AnnounceResourcePrefix: { Type: String }
 
   CmsEcrImageTag: { Type: String }
   CmsSecretsVersion: { Type: String }
