--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -59,6 +59,7 @@ Parameters:
   SharedAuroraPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlPort: { Type: String }
   SharedGlueDatabaseName: { Type: String }
+  AnnounceResourcePrefix: { Type: String }
   PorterJobExecutionSnsTopicArn: { Type: String }
 
   BetaPrxOrgArchiveS3ObjectKey: { Type: String }
