--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -845,6 +845,7 @@ Resources:
         IdHostname: !GetAtt Constants.IdHostname
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
+        AnnounceResourcePrefix: !GetAtt SharedAnnounceStack.Outputs.ResourcePrefix
 
         # App-specific parameters
 
@@ -951,6 +952,7 @@ Resources:
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
         SharedGlueDatabaseName: !GetAtt SharedGlueDatabaseStack.Outputs.SharedGlueDatabaseName
+        AnnounceResourcePrefix: !GetAtt SharedAnnounceStack.Outputs.ResourcePrefix
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
 
         # App-specific parameters
