Pass Announce prefix to app stacks

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -109,6 +109,7 @@ Resources:
         SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
+        AnnounceResourcePrefix: !Ref AnnounceResourcePrefix
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
