--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -263,6 +263,7 @@ Resources:
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
         SharedGlueDatabaseName: !Ref SharedGlueDatabaseName
+        AnnounceResourcePrefix: !Ref AnnounceResourcePrefix
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
