--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -83,6 +83,7 @@ Parameters:
   SharedAuroraPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlPort: { Type: String }
   SharedGlueDatabaseName: { Type: String }
+  AnnounceResourcePrefix: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
